2014-08-01  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/gcc-callbacks.cpp (mageec_pass_gate): Replace fprintf
	calls using result to use %i instead %hhi.
	* include/mageec/elfhash.h (hashedelf): Change type of data to
	unsigned char *.
	Add newline to end of file.
	* include/mageec/mageec-decision.h (enum decision): Add newline to
	end of file.
	* include/mageec/mageec-features.h: Add newline to end of file.
	(mageec_feature): Add virtual destructor.
	(class basic_feature): Add extra int to avoid padding warning.
	* include/mageec/mageec-ml.h (mageec_ml): Rename passes to
	known_passes.
	Add virtual destructor.
	(mageec_ml::raw_result): Correct @param comment.
	* include/mageec/mageec-passes.h: Add newline to end of file.
	(mageec_pass): Add virtual destructor.
	* include/mageec/mageec-result.h: Add newline to end of file.
	* include/mageec/mageec.h (hash_data): Change type of size
	parameter to unsigned long.
	* mageec/elfhash.cpp (hashedelf::hash): Remove #pragma GCC.
	static_cast realloc calls.
	* mageec/features.cpp (pad_string): Change type of length to
	long long.
	(dump_vector): Change type of variables that hold vector sizes
	to unsigned long.
	(mageec_feature::~mageec_feature): Added default destructor
	to avoid weak vtables.
	* mageec/hasher.cpp: Add newline to end of file.
	(hash_data): Change type of size parameter to unsigned long.
	Change casting for finalhash to static_cast.
	* mageec/mageechash.cpp: Add newline to end of file.
	* mageec/passes.cpp: Add newline to end of file.
	(mageec_pass::~mageec_pass): Added default destructor to avoid
	weak vtables.
	* ml/C5/Makefile.am: Override parent CFLAGS to remove -Werror.
	* ml/C5/Makefile.in: Regenerated.
	* ml/database.cpp (database::get_pass_list): Change cast of
	const char* to reinterpret_cast.
	(database::add_result): Change type of iterator variable to
	unsigned long.
	Change cast of long long to static_cast<int64_t>.
	(database::get_all_results): Change cast of const char* to