@@ -1,3 +1,9 @@
+2014-08-05  James Pallister  <james.pallister@bristol.ac.uk>
+	Fix divide by zero in the feature extractor
+
+	* gcc_plugin/feature-extract.cpp: Fix divide by zero if bb_count is
+	    zero
+
 2014-08-01  Simon Cook  <simon.cook@embecosm.com>
 
 	* gcc_plugin/gcc-callbacks.cpp (mageec_pass_gate): Replace fprintf
